# videodd

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  start-web.sh
devscripts/: make_readme.py  prepare_manpage.py
test/: test_execution.py
web_app/: .gitignore  auth.py  config.py  database.py  downloader.py  main.py  models.py  requirements.txt
web_app/routes/: api.py  auth.py  sse.py
web_app/static/: index.html  login.html
