[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp"
authors = [
    {name = "pukkandan", email = "pukkandan.ytdlp@gmail.com"},
]
description = "yt-dlp with a small password-protected Web UI"
readme = "README.md"
requires-python = ">=3.10"
license = "Unlicense"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
default = [
    "brotli; implementation_name=='cpython'",
    "brotlicffi; implementation_name!='cpython'",
    "certifi",
    "mutagen",
    "pycryptodomex",
    "requests>=2.32.2,<3",
    "urllib3>=2.0.2,<3",
    "websockets>=13.0",
    "yt-dlp-ejs==0.4.0",
]
curl-cffi = [
    "curl-cffi>=0.5.10,!=0.6.*,!=0.7.*,!=0.8.*,!=0.9.*,<0.15; implementation_name=='cpython'",
]
secretstorage = [
    "cffi",
    "secretstorage",
]
deno = [
    "deno>=2.6.6",
]

[project.urls]
Repository = "https://github.com/sn1p4am/videodd"

[project.scripts]
yt-dlp = "yt_dlp:main"

[tool.hatch.version]
path = "yt_dlp/version.py"
pattern = "_pkg_version = '(?P<version>[^']+)'"

[tool.hatch.build.targets.wheel]
packages = [
    "yt_dlp",
    "web_app",
]
